# ukrmolp-pvreaders

./: CMakeLists.txt  README.md
DipelmReader/: CMakeLists.txt  DipelmReader.xml  paraview.plugin
DipelmReader/vtk/: CMakeLists.txt  vtk.module  vtkDipelmReader.cxx  vtkDipelmReader.h
